orbitron font file works now fixed overflow thing for session tried to fix comment thing, will fix agian added rename for sessions trying to make table only load 30 and than loadmore button added DNF avergae thing to ao5 (will add to ao12 too)

--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,15 @@ body {
 }
 
 @font-face {
-    font-family: Digital2;
+    font-family: "Digital7";
     src: url(/digital-7.regular.ttf);
 }
 
-/* 
+
 @font-face {
     font-family: 'Orbitron';
-    src: url(/Orbitron-SemiBold.ttf);
-} */
+    src: url(/Orbitron-Regular.ttf);
+}
 
 /* Ads */
 .ad {
@@ -63,13 +63,13 @@ body {
     position: fixed;
     text-align: center;
     left: 50%;
-    top: 170px;
+    top: 166.5px;
     transform: translateX(-50%);
 }
 
 #comment {
     position: fixed;
-    top: 72%;
+    top: 74%;
     left: 50%;
     opacity: 0;
     height: 22px;
